--- a/adminsies.html
+++ b/adminsies.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="logs"></div>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io.connect('http://51.91.159.136:3333');
         socket.on('logs', function (message) {
