--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 </head>
 <body style="background-color:black;">
     <p id="top" style="text-align:center; color:black;">O</p>
+    <script src="/socket.io/socket.io.js"></script>
     <section id="flexy" class="flexZone" style="background-color:black; color:white;">
     </section>
     <script>
