--- a/project.html
+++ b/project.html
@@ -328,8 +328,10 @@
     <button class="bt" id="three" style="background-color:cyan;display:none;display:none;"
       onclick="second('three')">Hello.</button>
   </div>
+  <script src="/socket.io/socket.io.js"></script>
   <div id="text"></div>
   <script>
+    var socket = io.connect('http://51.91.159.136:3333');
     if (!localStorage.hide) { //If you opted to stay hidden, the page won't pass to the server your doings.
       socket.emit('connectionAdvisor');
     }
