--- a/blankTT.html
+++ b/blankTT.html
@@ -430,23 +430,7 @@
             },
         }
         var calendar = {
-            recurrent: [
-                {
-                },
-                {
-                },
-                {
-                    "7h45": { "course": "Maths", "type": "CM", "start": "7h45", "len": "1h30", "link": " https://univ-tlse3-fr.zoom.us/j/82085322165" },
-                    "9h25": { "course": "Physique", "type": "CM", "start": "9h25", "len": "1h30", "link": "https://univ-tlse3-fr.zoom.us/j/89929831979?pwd=aUFaay9FV0Q1WDg2L1lNR2xHSldDZz09" },
-                    "11h15": { "course": "Info", "type": "CM", "start": "11h15", "len": "1h", "link": "https://univ-tlse3-fr.zoom.us/j/88314838136" },
-                    "15h25": { "course": "Maths", "type": "TD", "start": "15h25", "len": "1h30", "link": "https://zoom.us/j/7034019301?pwd=a2dkWm84bTVFR1ZIWG45SVVZTE1YZz09" },
-                    "13h45": { "course": "Physique", "type": "TD", "start": "13h45", "len": "1h30", "link": "https://us02web.zoom.us/j/84521214589?pwd=SDZnbmk0VkxndExqUmRRdCszUkorQT09" }
-                },
-                {
-                },
-                {
-                },
-            ],
+            recurrent: [{}, {}, {}, {}, {},],
             exeptions: {
                 negative: {
                     "42": {
